--- a/main.html
+++ b/main.html
@@ -11,6 +11,25 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+<table>
+	<tr>
+		<th>Roll number</th>
+		<th>Name</th>
+	</tr>
+
+	<tr>
+		<td>1</td>
+		<td>Alice</td>
+	</tr>
+
+	<tr>
+		<td>2</td>
+		<td>Bob</td>
+	</tr>
+	
+</table>
+
+	
 </body>
 
 </html>
