--- a/main.html
+++ b/main.html
@@ -12,11 +12,13 @@
 </script>
 
 <table>
+	<thead>
 	<tr>
 		<th>Roll number</th>
 		<th>Name</th>
 	</tr>
-
+	</thead>
+	<tbody>
 	<tr>
 		<td>1</td>
 		<td>Alice</td>
@@ -26,7 +28,7 @@
 		<td>2</td>
 		<td>Bob</td>
 	</tr>
-	
+	</tbody>
 </table>
 
 	
